--- a/days/day-1/day-1.html
+++ b/days/day-1/day-1.html
@@ -9,9 +9,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Happy to be here.</p>
-    <p><strong>01-16-2022: </strong>Set up git on my PC today. I'm practicing commits and pull requests from multiple computers to simulate working on a dev team.</p>
-    <h2>Progress</h2>
-    <a href="days/day-1/day-1.html">1</a>
-    <a href="days/day-2/day-2.html">2</a>
+    <a href="../../index.html">home</a>
 </body>
 </html>
