change made on pc

--- a/days/day-2/day-2.html
+++ b/days/day-2/day-2.html
@@ -10,6 +10,7 @@
     <h1>Hello World</h1>
     <p>Happy to be here.</p>
     <p><strong>01-16-2022: </strong>Set up git on my PC today. I'm practicing commits and pull requests from multiple computers to simulate working on a dev team.</p>
-    <a href="../../index.html">home</a>
+    <p>Change made on PC.</p>
+<a href="../../index.html">home</a>
 </body>
 </html>
