--- a/days/day-2/day-2.html
+++ b/days/day-2/day-2.html
@@ -11,6 +11,7 @@
     <p>Happy to be here.</p>
     <p><strong>01-16-2022: </strong>Set up git on my PC today. I'm practicing commits and pull requests from multiple computers to simulate working on a dev team.</p>
     <p>Change made on PC.</p>
+    <p>Change made on Mac.</p>
 <a href="../../index.html">home</a>
 </body>
 </html>
