added javascript helps with page links

--- a/days/day-2-1/day-2-1.html
+++ b/days/day-2-1/day-2-1.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>day 1</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>day 2.1</title>
 </head>
 <body>
+
     <h1>Hello World</h1>
     <p>Happy to be here.</p>
-    <a href="../../index.html">home</a>
-    <h2>Progress</h2>
+    <p><strong>01-16-2022(1): </strong>Added in a stylesheet.</p>
+
+<a href="../../index.html">home</a>
+<h2>Progress</h2>
     <div id="progress-links-pages"></div>
     <script src="../../app-pages.js"></script>
 </body>
