--- a/days/day-2/day-2.html
+++ b/days/day-2/day-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dev playground</title>
+    <title>day 2</title>
 </head>
 <body>
     <h1>Hello World</h1>
@@ -13,5 +13,8 @@
     <p>Change made on PC.</p>
     <p>Change made on Mac.</p>
 <a href="../../index.html">home</a>
+<h2>Progress</h2>
+    <div id="progress-links-pages"></div>
+    <script src="../../app-pages.js"></script>
 </body>
 </html>
