--- a/days/day-2-2/day-2-2.html
+++ b/days/day-2-2/day-2-2.html
@@ -5,19 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    
-    <title>dev playground</title>
+    <title>day 2.2</title>
 </head>
 <body>
+
     <h1>Hello World</h1>
     <p>Happy to be here.</p>
     <p><strong>01-16-2022(2): </strong>Page links handled by an array in Javascript. At some point should be handled dynamically by a script/database... ???</p>
-    <h2>Progress</h2>
-    <div id="progress-links-index">
-    <!-- <a href="days/day-1/day-1.html">1</a>
-    <a href="days/day-2/day-2.html">2</a>
-    <a href="days/day-2-1/day-2-1.html">2.1</a> -->
-    </div>
-    <script src="app.js"></script>
+<a href="../../index.html">home</a>
+<h2>Progress</h2>
+    <div id="progress-links-pages"></div>
+    <script src="../../app-pages.js"></script>
 </body>
 </html>
