added css redirect index

--- a/days/day-2-3/day-2-3.html
+++ b/days/day-2-3/day-2-3.html
@@ -8,13 +8,19 @@
     <title>day 2.3</title>
 </head>
 <body>
-
-    <h1>Hello World</h1>
-    <p>Happy to be here.</p>
-    <p><strong>01-16-2022(3): </strong>Add a little more CSS.</p>
-<a href="../../index.html">home</a>
-<h2>Progress</h2>
-    <div id="progress-links-pages"></div>
-    <script src="../../app-pages.js"></script>
+    <div class="container">
+        <header>
+            <h1>Hello World</h1>
+            <p>Happy to be here.</p>
+        </header>
+        <p><strong>01-16-2022(3): </strong>Add a little more CSS.</p>
+        <footer>
+        <h2>Progress</h2>
+        <div id="progress-links-pages">
+            <a href="../../index.html">latest</a>
+        </div>
+        </footer>
+    </div> 
+    <script src="../../app-pages.js"></script> 
 </body>
 </html>
