--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="Refresh" content="0; url='days/day-2-3/day-2-3.html'" />
+
     
     <title>dev playground</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Happy to be here.</p>
-    <p><strong>01-16-2022(2): </strong>Page links handled by an array in Javascript. At some point should be handled dynamically by a script/database... ???</p>
-    <h2>Progress</h2>
-    <div id="progress-links-index">
-    <!-- <a href="days/day-1/day-1.html">1</a>
-    <a href="days/day-2/day-2.html">2</a>
-    <a href="days/day-2-1/day-2-1.html">2.1</a> -->
-    </div>
-    <script src="app.js"></script>
+
 </body>
 </html>
