add a quote box

--- a/days/day-2-5/day-2-5.html
+++ b/days/day-2-5/day-2-5.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>day 2.4 - dev playground</title>
+    <title>day 2-5 - dev playground</title>
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
         <source src="../../fish-video.mp4" type="video/mp4">
       </video>
       <button id="myBtn" onclick="myFunction()">Pause</button>
+      <div class="quote">
+          <blockquote>"A great quote goes here! I will do this with an API and Javascript. Stay tuned!"
+            <br>
+            <br>
+            <cite>~Heidi</cite>
+          </blockquote>
+          
+      </div>
       <div class="content">
           <div class="container">
-            <h1>Day 2(4)</h1>
-            <p><strong>01-16-2022(4): </strong>Add a background movie.</p>
+            <h1>dev playground - day 2-5</h1>
+            <p><strong>01-16-2022(5): </strong>Add a quote box.</p>
             <h2>Progress</h2>
             <div id="progress-links-pages">
                 <a href="../../index.html">latest</a>
