css tweaks for mobile

--- a/days/day-2-5/day-2-5.html
+++ b/days/day-2-5/day-2-5.html
@@ -23,7 +23,7 @@
       <div class="content">
           <div class="container">
             <h1>dev playground - day 2-5</h1>
-            <p><strong>01-16-2022(5): </strong>Add a quote box.</p>
+            <p><strong>01-16-2022: </strong>Add a quote box.</p>
             <h2>Progress</h2>
             <div id="progress-links-pages">
                 <a href="../../index.html">latest</a>
