css improved on mobile and close quote

--- a/days/day-5-1/day-5-1.html
+++ b/days/day-5-1/day-5-1.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>day 4 - dev playground</title>
+    <title>day 5.1 - dev playground</title>
 </head>
 <body>
   <header>
     <nav>
-        <a href="#quote">quote</a>
+        <div class="logo"><p>dev playground</p></div>
+        <a href="#quote" id="quoteLink">quote</a>
         <a href="#content">content</a>
         <a href="#progress-links-pages">progress</a>
     </nav>
-    <div class="logo"><p>dev playground</p></div>
     <button id="myBtn" onclick="myFunction()">pause fish</button>
   </header>
     <main>
@@ -26,25 +26,20 @@
           <blockquote><p>"A great quote goes here! I will do this with an API and Javascript. Stay tuned!"</p>
             <cite>~Heidi</cite>
           </blockquote>
-          <button id="quoteBtn">I don't like quote 👎</button>
+          <button id="quoteBtn">New Quote</button>
+          <button id="hidequoteBtn">X Close Quote</button>
       </div>
       <div class="content">
         <a class="anchor" id="content"></a>
-        <h1>Headline 1</h1>
-        <p>This is the content. This is the first paragraph of the content. The content is really fascinating at this point.</p>
-        <h2>Headline 2</h2>
-        <p>The content gets better and better the more you read.</p> 
-        <h2>Headline 2</h2>
-        <p>The content gets better and better the more you read.</p> 
-        <h3>Headline 3</h3>
-        <p>The content gets better and better the more you read.</p>  
+        <h1>Lessons Learned</h1>
+        <p>In Chrome Dev Tools hold down the refresh icon at top of browser and you will have an option to do a hard refresh and empty cache.</p>
       </div>
     </main>
     <footer>
       <div class="footer-content">
           <div class="container">
-            <h1>dev playground - day 4</h1>
-            <p><strong>01-19-2022: </strong>Add top navigation.</p>
+            <h1>dev playground - day 5.1</h1>
+            <p><strong>01-23-2022: </strong>Make buttons prettier and format for mobile.</p>
             <h2>Progress</h2>
             <div id="progress-links-pages">
                 <a href="../../index.html">latest</a>
@@ -53,6 +48,7 @@
           </div>
       </div>
     </footer>
-    <script src="../../app-pages.js"></script> 
+    <script src="../../app-pages-mod.js" type="module"></script> 
+    <script src="../../video.js"></script> 
 </body>
 </html>
