organized js and video into folders

--- a/days/day-2-2/day-2-2.html
+++ b/days/day-2-2/day-2-2.html
@@ -15,6 +15,6 @@
 <a href="../../index.html">home</a>
 <h2>Progress</h2>
     <div id="progress-links-pages"></div>
-    <script src="../../app-pages.js"></script>
+    <script src="../../js/app-pages.js"></script>
 </body>
 </html>
