--- a/days/day-2-4/day-2-4.html
+++ b/days/day-2-4/day-2-4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="../../fish-video.mp4" type="video/mp4">
+        <source src="../../video/fish-video.mp4" type="video/mp4">
       </video>
       <button id="myBtn" onclick="myFunction()">Pause</button>
       <div class="content">
@@ -23,6 +23,6 @@
             <!-- Use a button to pause/play the video with JavaScript -->
           </div>
       </div>
-    <script src="../../app-pages.js"></script> 
+    <script src="../../js/app-pages.js"></script> 
 </body>
 </html>
