--- a/days/day-4/day-4.html
+++ b/days/day-4/day-4.html
@@ -53,6 +53,6 @@
           </div>
       </div>
     </footer>
-    <script src="../../app-pages.js"></script> 
+    <script src="../../js/app-pages.js"></script> 
 </body>
 </html>
