--- a/days/day-2-3/day-2-3.html
+++ b/days/day-2-3/day-2-3.html
@@ -21,6 +21,6 @@
         </div>
         </footer>
     </div> 
-    <script src="../../app-pages.js"></script> 
+    <script src="../../js/app-pages.js"></script> 
 </body>
 </html>
