--- a/days/day-5-2/day-5-2.html
+++ b/days/day-5-2/day-5-2.html
@@ -19,7 +19,7 @@
   </header>
     <main>
     <video autoplay muted loop id="myVideo">
-        <source src="../../fish-video.mp4" type="video/mp4">
+        <source src="../../video/fish-video.mp4" type="video/mp4">
       </video>
       <div class="quote">
           <a class="anchor" id="quote"></a>
@@ -50,7 +50,7 @@
           </div>
       </div>
     </footer>
-    <script src="../../app-pages-mod.js" type="module"></script> 
-    <script src="../../video.js"></script> 
+    <script src="../../js/app-pages-mod.js" type="module"></script> 
+    <script src="../../js/video.js"></script> 
 </body>
 </html>
