transition on modal opne and smooth scrolling

--- a/days/day-7/day-7.html
+++ b/days/day-7/day-7.html
@@ -27,7 +27,7 @@
     </video>
     <div id="overlay">
 
-      <div id="modal">
+      <div id="modal" class="fade-in">
         <h2>Welcome to the Modal</h2>
         <p>We're glad you are here.</p>
         <img src="../../images/pexels-min-an-1305235.jpeg" alt= "one koi swimming in pond" />
@@ -40,8 +40,8 @@
     <div class="quote">
         <a class="anchor" id="quote"></a>
         <h2>Great Quotes</h2>
-          <blockquote><p>"A great quote goes here! I will do this with an API and Javascript. Stay tuned!"</p>
-          <cite>~Heidi</cite>
+          <blockquote><p></p>
+          <cite></cite>
         </blockquote>
         <button id="quoteBtn">👍 New Quote</button>
         <button id="hidequoteBtn">👎 No Quote</button>
